@@ -25,11 +25,8 @@ namespace gameswf
 		~as_mcloader();
 		
 		virtual bool	on_event(const event_id& id);
-
 		bool add_listener(as_value& listener);
 		bool remove_listener(as_value& listener);
-		bool load_clip(const char* url, as_value& container);
-		bool unload_clip(as_value& target);
 	};
 
 }	// end namespace gameswf
